--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                   <li><span class="pro-title"> Freelance </span> <span class="pro-detail">Available</span></li>
                 </ul>
               </div>
-              <a href="#" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
-              <a href="#" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
+              <a href="assets/img/background/new_resume_updated.pdf" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
+              <a href="mailto:reesujagan42@gmail.com" class="btn btn-danger"><i class="icon-speech"></i> Contact Me</a>
             </div>
           </div>   
         </div>
@@ -252,24 +252,24 @@
                 <li>
                   <div class="content-text">
                     <h3 class="line-title">Btech -Mechanical engineering</h3>
-                    <span>2016 - 2022</span>
-                    <span>8.9 cgpa</span>
+                    <span>2018 - 2022</span>
+                    <span>8.9 CGPA</span>
                     <p class="line-text">studied about machines and mechanics at Rajiv gandhi university of knowledge and technologies.</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
                     <h3 class="line-title">Pre university course </h3>
-                    <span>2010 - 2012</span>
-                    <span>8.25 cgpa</span>
+                    <span>2016 - 2018</span>
+                    <span>8.25 CGPA</span>
                     <p class="line-text">Rajiv gandhi university of knowledge and technologies</p>
                   </div>
                 </li>
                 <li>
                   <div class="content-text">
-                    <h3 class="line-title">Secondary School - Labratory High School</h3>
-                    <span>2005 - 2010</span>
-                    <p class="line-text">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                    <h3 class="line-title">Zilla parshid High School-Makarampuram</h3>
+                    <span>2011- 2016</span>
+                    <p class="line-text">Studied and earn math and language skills.</p>
                   </div>
                 </li>
               </ul>
