--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
      
                 </li>
               </ul>
-              <p>Copyright © Pichidi</p>
+              <p>Copyright © Harshitha❤️</p>
             </div>
           </div>
         </div>
